compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/EnumNameOverride.java
public enum EnumNameOverride /* EnumNameOverride*/ implements Bar {
  ;

  @org.jetbrains.annotations.NotNull()
  public static EnumNameOverride konstueOf(java.lang.String) throws java.lang.IllegalArgumentException, java.lang.NullPointerException;//  konstueOf(java.lang.String)

  @org.jetbrains.annotations.NotNull()
  public static EnumNameOverride[] konstues();//  konstues()

  @org.jetbrains.annotations.NotNull()
  public static kotlin.enums.EnumEntries<EnumNameOverride> getEntries();//  getEntries()

  private  EnumNameOverride();//  .ctor()
}
